[package]
name = "lesson_11"
version = "0.1.0"
authors = ["ppcamp <p.augustocampos@gmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]

# standard crate data is left out
[dev-dependencies]
pretty_assertions = "0.4.0"